# airs

./: .gitignore  .gitignore_summary.md  5aresumetrace.txt  AGENTS.md  AGENT_QUICKSTART.md  AIRS_SYSTEM_ANALYSIS_REPORT.md  CLAUDE_PRODUCTION_REVIEW.md  CODE_REVIEW_FIXES_SUMMARY.md  DEPLOYMENT_READY_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  SID_WRAPPER_CHANGE_REPORT.md  SIMULATION_CLI_CODE_REVIEW.md  SIMULATION_IN_DEPTH_CODE_REVIEW.md  SIMULATION_STUB_WIRING_REVIEW.md  TEST_HARNESS_REPORT.md  advice.txt  analog_avx2_fix_report.md  api.txt  block.txt  continue.json  contract.txt  create_configs.py  debug2.txt  debugbuild.txt  diagnostic.txt  diagrams_code_review.md  directory tree.txt  engine_family_test_results.json  engine_quarantine_list.json  engines.txt  fix.txt  fix2.txt  fixtures.txt  goldens.txt  harness.json  harness_report.txt  harness_review.md  harnesschange.json  json_commands_guide.md  (+47 more)
Simulation/: .gitignore  CLI_MIGRATION_SUMMARY.md  CLI_USAGE_GUIDE.md  CMakeLists.txt  DOCUMENTATION_HOUSEKEEPING_SUMMARY.md  HANDOFF_SUMMARY.md  README.md  SID_SSP_PORT_HANDOFF.md  SSP_SIDS_CODE_REVIEW_BUGS.md  apply_thread_safety_fixes.sh  consolidation.md  context.json  engine_test_suite.sh  fix_cm_toroidal.patch  libfftw3-3.lib  phases_4_5.txt  pyproject.toml  requirements-dev.txt  review.md  test_all_engines.json  test_mission.json  test_results.txt  verification_results_20251023_054706.json
Simulation/.claude/: settings.local.json
Simulation/analysis/: analyze_exotic_cost.py  analyze_igsoa_state.py  analyze_translation.py  baseline_validation_report.md  compute_autocorrelation.py  extract_drift.py  generate_baseline_validation.py  plot_satp_state.py  raw_translation_log_v2_1blend.txt  raw_translation_log_v2_blend.txt
Simulation/analysis/datasets/: README.md
Simulation/analysis/notebooks/: surrogate_evaluation.ipynb
Simulation/archive/: manifest.json
Simulation/archive/20251102_satp_translation_run_v2/: raw_output.txt  raw_output_max.txt  raw_translation_log.txt  raw_translation_log1.txt  (+3 more)
Simulation/bin_DEPRECATED/: README.md  dase_cli.exe.backup_20260119_pre_rebuild
Simulation/cli/: CMakeLists.txt
Simulation/dase_cli/: ANALYSIS_INTEGRATION.md  CMakeLists.txt  README.md  TEST_ANALYSIS_COMMANDS.md  config.json  run_mission.ps1
Simulation/docs/: ERROR_HANDLING_GUIDE.md  IGSOA_PROJECT_ROADMAP.md  INDEX.md  OPTIMIZATION_SUMMARY.txt  RELEASE_CHECKLIST.md  manual-review.md  proposed-features.txt  report-manual.md  report.md  🔍 COMPREHENSIVE CODE REVIEW_ DASE_IGSOA Simulation Engine.txt
Simulation/fixes/: apply_audit_critical_fixes.py  apply_critical_fixes.py  apply_fixes.py  apply_fixes_simple.py  apply_medium_priority_fixes.py  apply_remaining_improvements.py  resolve_3d_conflicts.py  resolve_conflicts.py
Simulation/igsoa_analysis/: analysis_report_R0.5.txt
Simulation/missions/: SATP_v1.json  SATP_v2.json  SATP_v2_blend.json  mission_analysis_rc_0.5.json  mission_complex_fixed.json  mission_foundation_test.json  mission_gw_echoes.json  mission_igsoa_complex.json  mission_rc_0.5.json  mission_rc_2.0.json  mission_rc_5.0.json  mission_rc_sensitivity.json  mission_rh_link.json  mission_short.json  mission_short_corrected.json  mission_short_fixed.json  mission_spectral.json  mission_spectral_r2.json  mission_spectral_r4.json  mission_static.json  run_mission.bat  satp_1d_complex_sim.json  satp_gaussian_amplify.json  satp_gaussian_init.json  satp_gaussian_max_amp.json  satp_translation_mission.py
Simulation/results/: dase_benchmark_results_20251023_034106.json  dase_benchmark_results_20251023_035258.json  dase_benchmark_results_20251023_035809.json  dase_benchmark_results_20251023_040707.json  dase_benchmark_results_20251023_042654.json  dase_benchmark_results_20251023_044238.json  dase_benchmark_results_20251023_044946.json  dase_benchmark_results_20251023_045352.json  dase_benchmark_results_20251023_050139.json  dase_benchmark_results_20251023_050609.json  dase_benchmark_results_20251023_053847.json  sid_phase5_report.md
Simulation/scripts/: analyze_bundle.js  cache_maintenance.py  deploy_cache.bat  deploy_cache.sh  plot_gw_waveform.py  profile_backend.py
Simulation/sids/: .gitignore  DOCUMENT_REVIEW.md  FIXES_SUMMARY.md  IMPLEMENTATION_REPORT.md  PRODUCTION_STATUS_REPORT.md  QUICK_START.md  REORGANIZATION_SUMMARY.md  STRESS_REPORT.md  USER_GUIDE.md  demo_auto.py  sid_ast.py  sid_ast_cli.py  sid_ast_to_diagram.py  sid_crf.py  sid_parser.py  sid_rewrite.py  sid_rewrite_cli.py  sid_stability_cli.py  sid_technical_specifications.md  sid_validate_cli.py  test_parametrized.py  test_parser.py  test_performance.py
Simulation/ssp/: CMakeLists.txt  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_IMPROVEMENTS_REPORT.md  CRITICAL_FIXES_APPLIED.md  IN_DEPTH_CODE_REVIEW.md  README.md  README_IMPROVEMENTS.md  REPORT.md  REPORT2.md  SPEC_COMPLIANCE_IMPLEMENTATION_REPORT.md  SPEC_COMPLIANCE_IMPROVEMENTS.md  SPEC_COMPLIANCE_REPORT.md  agent_advice.md  answers.txt  task.json
Simulation/tests/: README.md  benchmark_sid.cpp  benchmark_simple.py  compile_output.txt  conftest.py  final_verification.py  investigate_multi_rc_anomaly.sh  sid_dump_expr.cpp  test_2d_engine_comprehensive.cpp  test_all.bat  test_cli.py  test_compile.cpp  test_dll_direct.cpp  test_echo_detection.cpp  test_gw_engine_basic.cpp  test_gw_waveform_generation.cpp  test_igsoa_2d.cpp  test_igsoa_3d.cpp  test_igsoa_complex_node.cpp  test_igsoa_engine.cpp  test_igsoa_physics.cpp  test_integration_e2e.py  test_logger.cpp  test_new_features.py  test_physics_validation.sh  test_sid_capi_json.cpp  test_sid_core.cpp  test_sid_integration.cpp  test_sid_invariants.cpp  test_sid_ports.cpp  test_sid_regression.cpp  test_sid_rewrite.cpp  test_sid_validation.py
Simulation/tools/: MISSION_GENERATOR_GUIDE.md  analyze_igsoa_2d.py  analyze_satp_v2.bat  archive_run.py  generate_blend_schedule.py  market_research_survey.md  measure_spectral_evolution.sh  mission_generator.py  prepare_release.py  run_and_analyze_interactive.bat  visualize_satp.py
ssot/cpp_index/: CMakeLists.txt  README.md
(+770 files in other folders)
